fix: Nested checklists and lists not aligning
This fixes #42

--- a/.theme/task-list.css
+++ b/.theme/task-list.css
@@ -41,6 +41,7 @@ Preview Mode */
 
 ul.contains-task-list li > div.list-collapse-indicator {
   margin-top: 0.5rem;
+  padding: 0;
 }
 
 ul.contains-task-list li {
